# Pixelferrite-Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blueprint.txt
apps/pffconsole/: CMakeLists.txt  main.cpp
apps/pixelgen/: CMakeLists.txt  main.cpp
building-scripts/: README.md  build-windows-from-linux.sh  install-linux.sh  install-macos.sh  install-windows.ps1
config/: framework.yml  logging.yml  workspace.yml
core/: CMakeLists.txt
core/include/pixelferrite/: analysis_engine.hpp  banner.hpp  colors.hpp  config_loader.hpp  console.hpp  detection_engine.hpp  encoder_engine.hpp  evasion_engine.hpp  explain_engine.hpp  image_engine.hpp  logger.hpp  module_loader.hpp  nop_engine.hpp  path_verifier.hpp  session_manager.hpp  simulation_engine.hpp
core/src/: analysis_engine.cpp  banner.cpp  colors.cpp  config_loader.cpp  console.cpp  detection_engine.cpp  encoder_engine.cpp  evasion_engine.cpp  explain_engine.cpp  image_engine.cpp  logger.cpp  module_loader.cpp  nop_engine.cpp  path_verifier.cpp  session_manager.cpp  simulation_engine.cpp
data/schemas/: module.schema.json
docs/: README.md  architecture.md  console_commands.md  ethical_use.md  image_embedding.md  lab_setup_guides.md  module_dev.md  pixelgen.md
modules/analysis/carrier_quality_score/: module.cpp  module.json
modules/analysis/embedding_comparator/: module.cpp  module.json
modules/analysis/transcode_resilience_score/: module.cpp  (+1 more)
scripts/: bootstrap.ps1  generate_dataset.ps1  install.ps1  install.sh  run_tests.ps1
tools/module_lint/: README.md
tools/report_export/: README.md
(+179 files in other folders)
